cmake_minimum_required(VERSION 3.2)
project(jmbook)

add_subdirectory(01.\ 문제\ 해결과\ 프로그래밍\ 대회)
add_subdirectory(06.\ 무식하게\ 풀기)
add_subdirectory(07.\ 분할\ 정복)
add_subdirectory(08.\ 동적\ 계획법)
add_subdirectory(09.\ 동적\ 계획법\ 테크닉)
add_subdirectory(10.\ 탐욕법)
add_subdirectory(12.\ 최적화\ 문제\ 결정\ 문제로\ 바꿔\ 풀기)
add_subdirectory(13.\ 수치\ 해석)
add_subdirectory(14.\ 정수론)
add_subdirectory(16.\ 비트마스크)
add_subdirectory(17.\ 부분\ 합)
add_subdirectory(18.\ 선형\ 자료\ 구조)
add_subdirectory(19.\ 큐와\ 스택,\ 데크)
add_subdirectory(20.\ 문자열)
add_subdirectory(21.\ 트리의\ 구현과\ 순회)
add_subdirectory(23.\ 우선순위\ 큐와\ 힙)
add_subdirectory(24.\ 구간\ 트리)
add_subdirectory(25.\ 상호\ 배타적\ 집합)
add_subdirectory(28.\ 그래프의\ 깊이\ 우선\ 탐색)
add_subdirectory(29.\ 그래프의\ 너비\ 우선\ 탐색)
add_subdirectory(30.\ 최단\ 경로\ 알고리즘)
add_subdirectory(31.\ 최소\ 비용\ 신장트리)
add_subdirectory(32.\ 네트워크\ 유량)