cmake_minimum_required(VERSION 3.2)
project(CH08)

add_subdirectory(Quantization\ \(QUANTIZE\))
add_subdirectory(두니발\ 박사의\ 탈옥\ \(NUMB3RS\))
add_subdirectory(비대칭\ 타일링\ \(ASYMTILING\))
add_subdirectory(삼각형\ 위의\ 최대\ 경로\ \(TRIANGLEPATH\))
add_subdirectory(삼각형\ 위의\ 최대\ 경로\ 개수\ 세기\ \(TRIPATHCNT\))
add_subdirectory(와일드카드\ \(WILDCARD\))
add_subdirectory(외발\ 뛰기\ \(JUMPGAME\))
add_subdirectory(원주율\ 외우기\ \(PI\))
add_subdirectory(장마가\ 찾아왔다\ \(SNAIL\))
add_subdirectory(최대\ 증가\ 부분\ 수열\ \(LIS\))
add_subdirectory(타일링\ 방법의\ 수\ 세기\ \(TILING2\))
add_subdirectory(폴리오미노\ \(POLY\))
add_subdirectory(합친\ LIS\ \(JLIS\))